[package]
name = "native"
version = "0.1.0"
edition = "2021"
authors = ["Kingkor Roy Tirtho <krtirtho@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
itertools = "0.10.3"
rand = "0.8.5"
url = "2.2.2"
lazy_static = "1.4.0"
thiserror = "1.0.31"
symphonia = { version = "0.5.0",  features = ["aac","mp3","isomp4"]}
cpal = "0.13"