[package]
name = "rowdy_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10.3"
rand = "0.8.5"
url = "2.2.2"
thiserror = "1.0.31"
symphonia = { version = "0.5.0", features = ["aac", "mp3", "isomp4"] }
cpal = "0.13"

[lib]
name = "rowdy_player"
path = "src/lib.rs"
