[package]
name = "rowdy_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"
rand = "0.8"
url = "2.2"
thiserror = "1.0"
symphonia = { version = "0.5.0", features = ["aac", "mp3", "isomp4"] }
cpal = "0.13"
crossbeam-channel = "0.5"
flume = "0.10.12"

[lib]
name = "rowdy_player"
path = "src/lib.rs"
