[package]
name = "rustee_rowdy"
version = "0.1.0"
edition = "2021"
authors = ["Kingkor Roy Tirtho <krtirtho@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
itertools = "0.10.3"
rand = "0.8.5"
url = "2.2.2"
lazy_static = "1.4.0"
thiserror = "1.0.31"
symphonia = { version = "0.5.0", features = ["aac", "mp3", "isomp4"] }
cpal = "0.13"
tokio = {version= "1.18.2", features = ["macros", "rt-multi-thread"]}
tonic = "0.7.2"
tonic-reflection = "0.4.0"
prost = "0.10.3"

[build-dependencies]
tonic-build = "0.7.2"

[[bin]]
name = "rustee_rowdy"
path = "src/main.rs"
