[package]
name = "rustee_rowdy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
anyhow = "1.0.57"
thiserror = "1.0.31"
rowdy_player = { path = "../rowdy_player" }

[lib]
crate-type = ["staticlib", "cdylib"]
